--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -44,7 +44,7 @@
                     <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
                     <form class="form-inline my-2 my-lg-0" method="POST" action="{% url 'search-post' %}">
                         {% csrf_token %}
-                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="searched">
+                        <input class="form-control mr-sm-2" type="search" placeholder="{{ searched }}" aria-label="Search" name="searched">
                         <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
                     </form>
                 {% else %}
